so we have an endpoint for analyzing lastfm listens
